--- a/lib/widget/loading-action.css
+++ b/lib/widget/loading-action.css
@@ -100,6 +100,7 @@
     min-width: 6em;
     min-height: 6.5em;
     position: relative;
+    overflow: auto;
 }
 
 .hc-htmlhc-loading-action-is-errored>*:not(.hc-htmlhc-loading-action-error-ui) {
