--- a/widgets/slidein/widget.css
+++ b/widgets/slidein/widget.css
@@ -12,6 +12,7 @@
     top: 0px;
     left: 0px;
     --color1: rgb(5, 12, 37);
+    --color2: aliceblue;
 }
 
 .hc-slide-in>.container {
@@ -33,8 +34,8 @@
 .hc-slide-in>.container>.main {
     display: inline-flex;
     background-color: var(--color1);
-    box-shadow: 0px 0.75em 1.5em var(--color1);
-    color: aliceblue;
+    box-shadow: 0px 0.75em 1.5em rgb(131, 133, 141);
+    color: var(--color2);
     padding: 0.5em;
     border-radius: 0.5em;
     opacity: 0;
