--- a/widgets/slidein/widget.css
+++ b/widgets/slidein/widget.css
@@ -34,7 +34,7 @@
 .hc-slide-in>.container>.main {
     display: inline-flex;
     background-color: var(--color1);
-    box-shadow: 0px 0.75em 1.5em rgb(131, 133, 141);
+    box-shadow: 0px 0.75em 1.5em rgb(195 199 215);
     color: var(--color2);
     padding: 0.5em;
     border-radius: 0.5em;
