--- a/widgets/sections-thread/widget.css
+++ b/widgets/sections-thread/widget.css
@@ -4,27 +4,32 @@
     This stylesheet works on the sections-thread widget
 */
 
+.hc-sections-thread {
+    display: flex;
+    justify-content: center;
+}
 
 .hc-sections-thread>.container {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
-    max-width: clamp(80vw, 750px, 99vw);
-    --hc-sections-thread-width: clamp(80vw, 750px, 99vw);
+    max-width: var(--hc-sections-thread-width);
+    --hc-sections-thread-width: clamp(80vw, 750px, 99vw - 1em);
 }
 
 .hc-sections-thread>.container>.map {
     position: sticky;
     margin-top: 1em;
     top: 5em;
-    width: 100%;
+    width: clamp(100px, 100%, 100vw - 6em);
+    margin-left: 2.5em;
 
 }
 
 .hc-sections-thread>.container>.map>* {
     position: relative;
     top: 1em;
-    left: clamp(2em, var(--content-width, 100%) + var(--map-width), 100% - var(--map-width) + 2em);
-    max-width: calc((var(--hc-sections-thread-width) * 0.35) - 2em);
+    left: clamp(2em, var(--content-width, 100%) + var(--map-width), 100% - var(--map-width) + 2.5em);
+    max-width: calc((var(--hc-sections-thread-width) * 0.35) - 5em);
     display: inline-flex;
     min-height: 150px;
     padding: 0.5em;
@@ -36,7 +41,7 @@
 .hc-sections-thread>.container>.content {
     position: relative;
     z-index: 1;
-    max-width: clamp(150px, 100% - var(--map-width, 5em) + 1em, 100%);
+    max-width: clamp(150px, 100% - var(--map-width, 5em) - 1em, 100%);
     margin-left: 0.5em;
     transform: translateY(calc(var(--map-height) * -1));
 }
