--- a/lib/widget/widget-image.css
+++ b/lib/widget/widget-image.css
@@ -11,3 +11,12 @@
     object-position: center;
     border-radius: inherit;
 }
+
+.hc-htmlhc-widget-image-host {
+    position: relative;
+}
+
+.hc-htmlhc-widget-image-host>* {
+    width: 100%;
+    height: 100%;
+}
