--- a/widgets/simple-tree/generation/widget.css
+++ b/widgets/simple-tree/generation/widget.css
@@ -9,7 +9,7 @@
 .hc-simple-tree-generation>.container {
     display: flex;
     flex-direction: column;
-    gap: 0.75em;
+    /* gap: 0.75em; */
     transition: 0.5s 0.25s;
     align-items: center;
 }
